# c2pa-opentdf-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build-xcframework.sh  build.rs  cbindgen.toml
.github/workflows/: feature.yaml  release.yaml
include/: c2pa_opentdf.h
src/: error.rs  ffi.rs  lib.rs  signer.rs
tests/: ffi_integration.rs
