[package]
name = "c2pa_opentdf"
version = "0.1.0"
edition = "2021"

[dependencies]
c2pa = { version = "0.67.1", features = ["file_io"] }
opentdf = { path = "../opentdf-rs" }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.13.0"
thiserror = "1.0"
sha2 = "0.10"

[features]
default = []
kas = ["opentdf/kas"]
