[package]
name = "c2pa_opentdf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
c2pa = { version = "0.75", features = ["file_io"] }
opentdf = { git = "https://github.com/arkavo-org/opentdf-rs.git", tag = "0.11.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.13.0"
thiserror = "2.0"
sha2 = "0.10"

[build-dependencies]
cbindgen = "0.27"

[features]
default = []
kas = ["opentdf/kas"]

[dev-dependencies]
ureq = { version = "3", features = ["json"] }
base64 = "0.22"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
